--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -112,8 +112,8 @@ hr.layer-light {
 // Breadcrumb-Header
 
 .breadcrumb {
-		margin-top: -30px;
-		margin-bottom: -3px;
+		margin-top: -24px;
+		margin-bottom: -8px;
 		font-size: 12px;
 		background: none;
 		padding-left: 0;
@@ -134,6 +134,11 @@ a.breadcrumb-link:link {
 		color: @brand-primary-light;
 }
 
+a.breadcrumb-link:hover {
+		font-size: 12px;
+		color: white;
+}
+
 @media (max-width: 768px) {
     .breadcrumb {
         margin-top: -22px;
@@ -143,13 +148,28 @@ a.breadcrumb-link:link {
 // Breadcrumb ohne Header
 
 .breadcrumb-content {
-		margin-top: 60px;
+		margin-top: 66px;
 		margin-bottom: 0;
 		font-size: 12px;
 		// background: @gray-lighter;
         border-top: 1px @brand-primary;
 		padding: 8px 15px;
 		list-style: none;
+}
+
+a.breadcrumb-content-link {
+        font-size: 12px;
+        color: @brand-primary-light;
+}
+
+a.breadcrumb-content-link:link {
+        font-size: 12px;
+        color: @brand-primary-light;
+}
+
+a.breadcrumb-content-link:hover {
+		font-size: 12px;
+		color: @brand-primary;
 }
 
 .breadcrumb-content>li {
@@ -318,8 +338,12 @@ a.active {
 /*    margin-top: 30px;*/
 }
 
-.btn-primary:hover, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
-		background: darken(@brand-primary, 10%);
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
+		background-color: darken(@brand-primary, 10%);
+}
+
+.btn-primary.active:hover {
+        background-color: @brand-primary;
 }
 
 .btn-upload {
@@ -447,6 +471,15 @@ aside {
     border-bottom: 2px solid #e6e6e6;
 }
 
+.navbar-default .nav > li > a:hover, .navbar-default .nav > li > a:focus:hover {
+
+}
+
+
+.navbar-right {
+    margin-top: 6px;
+}
+
 .navbar-default .navbar-toggle {
     border-color: transparent;
     border-radius: 0px;
@@ -474,12 +507,14 @@ aside {
 
 .navbar-brand {
 	padding: 0em 0em 0em 0em;
+    margin: 10px 0px 15px 15px;
 }
 
 .navbar-brand > img {
 	display: block;
-	height: 60px;
-    padding: 10px 0px 10px 15px;
+	height: 52px;
+    padding-left: 15px;
+    padding-bottom: 5px;
 }
 
 .navbar-nav > li > a {
@@ -487,15 +522,15 @@ aside {
 }
 
 .btn-login {
-    margin-top: 21px;
-    font-size: 14px;
+    margin-top: 23px;
+    font-size: 13px;
     font-weight: 300;
     padding: 4px 12px 3px 12px;
 }
 
 .btn-profile {
     margin: 29px 15px 0 15px;
-    font-size: 14px;
+    font-size: 13px;
     font-weight: 300;
     padding: 4px 9px 3px 0px;
     padding-left: 30px!important;
@@ -508,6 +543,12 @@ aside {
     background-color: @brand-primary;
     border: none;
     color: white;
+    cursor: pointer;
+}
+
+.btn-profile:hover, .btn-profile:active {
+    background-color: darken(@brand-primary, 10%);
+    cursor: pointer;
 }
 
 .btn-profile>:first-child {
@@ -520,14 +561,17 @@ aside {
 		font-size: 11px;
 		text-align: center;
 		border-right: 1px solid rgba(0,0,0,0.2);
+        cursor: pointer;
 }
 
 .open > .dropdown-toggle.btn-primary:hover {
         background-color: darken(@brand-primary, 10%);
+        cursor: pointer;
 }
 
 .open > .dropdown-toggle.btn-primary:focus {
     background-color: darken(@brand-primary, 10%);
+    cursor: pointer;
 }
 
 .dropdown-menu > li > a.profile-links {
@@ -537,11 +581,13 @@ aside {
     font-weight: 400;
     color: @brand-primary;
     padding-left: 15px;
+    cursor: pointer;
 }
 
 .dropdown-menu > li > a:hover.profile-links {
     color: darken(@brand-primary, 10%);
     background-color: transparent;
+    cursor: pointer;
 }
 
 p.profile-username {
@@ -552,7 +598,7 @@ p.profile-username {
 }
 
 .navbar-default {
-		border-color: rgba(34,34,34,.09);
+		border-color: none;
 		font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
         font-weight: 400;
 		background-color: #fff;
@@ -571,25 +617,33 @@ p.profile-username {
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
 		color: @brand-primary;
+        border-color: white;
+        background-color: white;
 }
 
 .navbar-default .nav > li>a,
 .navbar-default .nav>li>a:focus {
 		text-transform: uppercase;
-		font-size: 14px;
+		font-size: 13px;
 		font-weight: 400;
 		color: #222;
+        border-color: white;
+        background-color: white;
 }
 
 .navbar-default .nav > li>a:hover,
 .navbar-default .nav>li>a:focus:hover {
 		color: @brand-primary;
+        border-color: white;
+        background-color: white;
 }
 
 .navbar-default .nav > li.active>a,
 .navbar-default .nav>li.active>a:focus {
 		color: @brand-primary!important;
 		background-color: transparent;
+        border-color: white;
+        background-color: white;
 }
 
 
@@ -598,7 +652,8 @@ p.profile-username {
 }
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-    background-color: transparent;
+    border-color: white;
+    background-color: white;
 }
 
 // Header Home
