--- a/client/templates/admin/admin-news-events-edit.html
+++ b/client/templates/admin/admin-news-events-edit.html
@@ -1,12 +1,14 @@
 <template name="adminNewsEventsEdit">
 	<!-- {{> formNewsEvents}} -->
-	<div class="container">
-		<div class="putdown">
+    <div class="container extra-spacing-bottom">
+		<div class="putdown extra-spacing-bottom">
+            <h1 class="extra-spacing-bottom">EDIT ENTRY</h1>
+            <hr>
 			{{#with newsEventsEntry}}
 			<form class="form-horizontal" role="form">
 
 		        <div class="form-group">
-		            <label for="title" class="col-sm-2 control-label">Title</label>                        
+		            <label for="title" class="col-sm-2 control-label">Title</label>
 		        	<div class="col-sm-10">
 		            	<input type="text" class="form-control" value="{{title}}" id="title" name="title" placeholder="Enter Title">
 		            </div>
@@ -17,7 +19,7 @@
 		            <div class="col-sm-10">
 		                <textarea type="message" class="form-control" value="{{description}}" id="description" name="description" placeholder="Enter Description"></textarea>
 		            </div>
-		        </div> {{description}} --> 
+		        </div> {{description}} -->
 
 		        <div class="form-group">
 		            <label for="description" class="col-sm-2 control-label">Description</label>
@@ -36,23 +38,23 @@
 		                </div>
 		                <div class="radio">
 		                  <label><input type="radio" name="netype" value="event">Event</label>
-		                </div>       
+		                </div>
 		            </div>
 		        </div>
-			
+
 				{{#if imageExists}}
 				<div class="thumbnail">
-					<a title="Edit" id="js-delete-image" class="btn btn-danger" href="{{pathFor route='adminNewsEventsEdit'}}"><i class="fa fa-trash"></i> </a>
-					<img src="{{coverImage.url}}" class="img-responsive img-mini" alt="Image">	
+					<a title="Edit" id="js-delete-image" class="btn btn-danger admin-button" href="{{pathFor route='adminNewsEventsEdit'}}"><i class="fa fa-trash"></i> </a>
+					<img src="{{coverImage.url}}" class="img-responsive img-mini" alt="Image">
 				</div>
-				
+
 				{{else}}
 				<div class="form-group">
 		            <label for="coverImage" class="col-sm-2 control-label">Image</label>
 		            <div class="col-sm-10">
 	                	<input type="file" id="coverImage">
 		            </div>
-		        </div>	
+		        </div>
 				{{/if}}
 
 				{{#if attachmentExists}}
@@ -60,22 +62,22 @@
 					<a href="{{ attachment.url }}">{{attachment.original.name}}  </a>
 					<button type="button" id="js-delete-attachment" class="btn btn-danger"><i class="fa fa-trash"></i></button>
 				</li>
-		        {{else}} 
+		        {{else}}
 		         <div class="form-group">
 		            <label for="attachment" class="col-sm-2 control-label">Attachment</label>
 
-				   
+
 		            <div class="col-sm-10">
 	                	<input type="file" id="attachment">
 		            </div>
-		        </div>	
+		        </div>
 		        {{/if}}
-				
+
 				<hr>
 
 		        <div class="form-group">
 		            <div class="col-sm-offset-2 col-sm-10">
-		                <button type="submit" id="js-updateEntry" class="btn btn-primary">UPDATE</button>
+		                <button type="submit" id="js-updateEntry" class="btn btn-primary admin-button">UPDATE</button>
 		            </div>
 		        </div>
 
