--- a/client/templates/admin/admin-publications-lists.html
+++ b/client/templates/admin/admin-publications-lists.html
@@ -1,19 +1,23 @@
 <template name="adminPublicationsList">
-	<div class="container">
-		<div class="putdown">
-			<div class="col-md-6 col-md-offset-3">
-				{{#each publicationsData}}
-				<ul class="list-group">
-					<li class="list-group-item">
-					<a title="Edit" id="js-edit-ne" href="{{pathFor route='adminPublicationsEdit'}}">{{title}}</a>
-					<!-- edit button -->
-					<a title="Edit" id="js-edit-ne" class="btn btn-primary" href="{{pathFor route='adminPublicationsEdit'}}"><i class="fa fa-pencil-square-o"></i></a>
-					<!-- delete button -->
-					<a title="Edit" id="js-delete-ne" class="btn btn-danger" href="#"><i class="fa fa-trash"></i> </a>
-					</li>
-				</ul>
-				{{/each}}
-			</div>
+	<div class="container extra-spacing-bottom">
+		<div class="putdown extra-spacing-bottom">
+            <h1 class="extra-spacing-bottom">PUBLICATION LIST</h1>
+            <hr>
+            <div class="row">
+    			<div class="col-md-6 col-md-offset-3">
+    				{{#each publicationsData}}
+    				<ul class="list-group">
+    					<li class="list-group-item">
+    					<a title="Edit" id="js-edit-ne" href="{{pathFor route='adminPublicationsEdit'}}">{{title}}</a>
+    					<!-- edit button -->
+    					<a title="Edit" id="js-edit-ne" class="btn btn-primary admin-button" href="{{pathFor route='adminPublicationsEdit'}}"><i class="fa fa-pencil-square-o"></i></a>
+    					<!-- delete button -->
+    					<a title="Edit" id="js-delete-ne" class="btn btn-danger admin-button" href="#"><i class="fa fa-trash"></i> </a>
+    					</li>
+    				</ul>
+    				{{/each}}
+    			</div>
+            </div>
 		</div>
 	</div>
 </template>
