--- a/client/templates/admin/admin-publications.html
+++ b/client/templates/admin/admin-publications.html
@@ -1,22 +1,25 @@
 <template name="adminPublications">
 	<!-- {{> formNewsEvents}} -->
-	<div class="container">
+
+        <div class="container extra-spacing-top">
 		<div class="putdown">
-			<form class="form-horizontal" id="addPub" role="form">
+            <h1 class="extra-spacing-bottom">ADD A NEW PUBLICATION</h1>
+            <hr>
+		<form class="form-horizontal" id="addPub" role="form">
         <div class="form-group">
             <label for="title" class="col-sm-2 control-label">Title</label>
         	<div class="col-sm-10">
             	<input type="text" class="form-control" id="title" name="title" placeholder="Enter Title">
             </div>
         </div>
-			
+
 			<div class="input-group">
 				 <div class="form-group">
 			        <label for="authors" class="col-sm-2 control-label">Author(s)</label>
 			        <div class="col-sm-10">
 			            <input type="text" class="form-control" name="authors" id="firstAuthor"  placeholder="Enter Author(s)">
 			            <span class="input-group-btn">
-	                    	<button class="btn btn-default" id="js-addAuthors" type="button">ADD AUTHOR</button>
+	                    	<button class="btn btn-primary extra-spacing-top extra-spacing-bottom" id="js-addAuthors" type="button">ADD AUTHOR</button>
 	                  	</span>
 			        </div>
 			    </div>
@@ -47,7 +50,7 @@
 	      	<div name="abstract" id="abstract">
         	</div>
           </div>
-      </div>	
+      </div>
 
 			<div class="form-group js-radios">
 			    <label for="Outlet" class="col-sm-2 control-label">Outlet</label>
@@ -58,8 +61,8 @@
 			        <label class="radio-inline"><input type="radio" name="outlet-type" id="bc" value="bc">Book Chapter</label>
 			    </div>
 			</div>
-		
-				{{#if ppSelected}}	
+
+				{{#if ppSelected}}
 	       <div class="form-group">
 	          <label for="journal" class="col-sm-2 control-label">Journal</label>
 	          <div class="col-sm-10">
@@ -75,7 +78,7 @@
 	      </div>
 				{{/if}}
 
-			{{#if bkSelected}}	
+			{{#if bkSelected}}
        <div class="form-group">
           <label for="publisher" class="col-sm-2 control-label">Publisher</label>
           <div class="col-sm-10">
@@ -91,7 +94,7 @@
       </div>
 			{{/if}}
 
-			{{#if bcSelected}}	
+			{{#if bcSelected}}
        <div class="form-group">
         <label for="publisher" class="col-sm-2 control-label">Publisher</label>
         <div class="col-sm-10">
@@ -132,13 +135,15 @@
 
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-          <button type="submit" id="js-addEntry" class="btn btn-primary">ADD ENTRY</button>
+          <button type="submit" id="js-addEntry" class="btn btn-primary extra-spacing-bottom">ADD ENTRY</button>
         </div>
       </div>
 
 	    </form> <!-- end form -->
     </div> <!-- END putdown -->
 	</div> <!-- END container -->
+
+
 </template>
 
 <template name="authorsInput">
