--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -112,7 +112,7 @@ hr.layer-light {
 // Breadcrumb-Header
 
 .breadcrumb {
-		margin-top: -24px;
+		margin-top: -20px;
 		margin-bottom: -8px;
 		font-size: 12px;
 		background: none;
@@ -139,11 +139,18 @@ a.breadcrumb-link:hover {
 		color: white;
 }
 
-@media (max-width: 768px) {
-    .breadcrumb {
-        margin-top: -22px;
-    }
-}
+// @media (max-width: 767px) {
+//     .breadcrumb {
+//         margin-top: -22px;
+//     }
+// }
+//
+// @media (max-width: 767px) {
+//     .breadcrumb {
+//         padding-top: 16px;
+//     }
+// }
+
 
 // Breadcrumb ohne Header
 
@@ -753,7 +760,7 @@ header .header-home .header-home-inner p {
 
 @media (max-width: 460px) {
 	header.home {
-		height: 400px;
+		height: 420px;
 
 		h1{
 				font-size: 20px;
@@ -764,7 +771,7 @@ header .header-home .header-home-inner p {
 		}
 
 		.header-home {
-				padding: 50px 15px;
+				padding: 70px 15px;
 		}
 		.header-home .header-home-inner hr {
 				margin: 15px auto;
@@ -772,9 +779,9 @@ header .header-home .header-home-inner p {
 	}
 }
 
-@media (max-width: 370px) {
+@media (max-width: 375px) {
 	header.home {
-		height: 380px;
+		height: 420px;
 
 		h1{
 				font-size: 18px;
@@ -785,7 +792,7 @@ header .header-home .header-home-inner p {
 		}
 
 		.header-home {
-				padding: 60px 15px;
+				padding: 70px 15px;
 		}
 		.header-home .header-home-inner hr {
 				margin: 15px auto;
@@ -798,7 +805,7 @@ header .header-home .header-home-inner p {
 // Header Bibliography
 
 header .header-bibliography {
-		background-image: url('../img/header_03.jpg');
+		background-image: url('../img/header_bibliography.jpg');
 		background-attachment: scroll;
 		background-position: center center;
 		.background-cover;
@@ -811,7 +818,7 @@ header .header-bibliography {
 		background-size: cover;
 		-o-background-size: cover;
 		padding-bottom: @spacing/2;
-		height: 340px;
+		height: 350px;
 }
 
 header .header-bibliography {
@@ -851,8 +858,8 @@ header .header-bibliography .header-bibliography-inner p {
 }
 
 @media (max-width: 767px) {
-	header {
-		height: 340px;
+	header .header-bibliography {
+		height: 350px;
 
 		h1{
 				font-size: 26px;
@@ -870,7 +877,26 @@ header .header-bibliography .header-bibliography-inner p {
 	}
 }
 
+@media (max-width: 430px) {
+	header .header-bibliography {
+		height: 350px;
 
+		h1{
+				font-size: 24px;
+                padding-top: 15px;
+		}
+		h2{
+				font-size: 14px;
+		}
+
+		.header-bibliography {
+				padding: 80px 15px;
+		}
+		.header-bibliography .header-bibliography-inner hr {
+				margin: 15px auto;
+		}
+	}
+}
 
 // Header Content
 
@@ -888,7 +914,7 @@ header {
 		background-size: cover;
 		-o-background-size: cover;
 		padding-bottom: @spacing/2;
-		height: 340px;
+		height: 350px;
 }
 
 header .header-content {
@@ -928,8 +954,8 @@ header .header-content .header-content-inner p {
 }
 
 @media (max-width: 767px) {
-	header {
-		height: 340px;
+	header .header-content {
+		height: 350px;
 
 		h1{
 				font-size: 26px;
@@ -946,6 +972,28 @@ header .header-content .header-content-inner p {
 		}
 	}
 }
+
+@media (max-width: 430px) {
+	header .header-content {
+		height: 350px;
+
+		h1{
+				font-size: 24px;
+                padding-top: 15px;
+		}
+		h2{
+				font-size: 14px;
+		}
+
+		.header-content {
+				padding: 80px 15px;
+		}
+		.header-content .header-content-inner hr {
+				margin: 15px auto;
+		}
+	}
+}
+
 
 
 
