--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -121,7 +121,7 @@ hr.layer-light {
 
 .breadcrumb>.active {
 		color: rgba(255,255,255,.8);
-		text-shadow: 0 0 4px #000;
+		text-shadow: 0 0 2px #000;
 }
 
 a.breadcrumb-link {
@@ -203,16 +203,18 @@ h1 {
 		text-align: center;
 		margin-bottom: 0px;
 		padding-top: 20px;
+        text-shadow: 0 0 2px #000;
 }
 
 h2{
 		font-weight: 400;
 		font-size: 17px;
-		color: rgba(255,255,255,.8);
+		color: white;
 		line-height: 140%;
 		text-align: center;
 		margin-bottom: 25px;
 		margin-top: 0px;
+        text-shadow: 0 0 2px #000;
 }
 
 h3 {
