--- a/client/templates/members/profileSettings.html
+++ b/client/templates/members/profileSettings.html
@@ -10,7 +10,7 @@
             <div class="header-content-inner">
               <h1>PROFILE SETTINGS</h1>
               <hr>
-              <h2>Change your basic account settings.<br>*Please fill out the required fields.</h2>
+              <h2>Change your basic account settings here.<br>*Please fill out the required fields.</h2>
             </div>
         </div>
   </header> <!-- ./Stage -->
