--- a/client/templates/guests/allNewsEvents.html
+++ b/client/templates/guests/allNewsEvents.html
@@ -58,9 +58,9 @@
 				<div class="col-sm-4">
 					<div class="caption">
 					{{#if imageExists}}		
-						<h4>{{title}}<img alt="news thumbnail" class="news-thumbnail" src="{{ coverImage.url }}" /></h4>
+						<h4>TRUE {{title}}<img alt="news thumbnail" class="news-thumbnail" src="{{ coverImage.url }}" /></h4>
 					{{else}}
-						<h4>{{title}}</h4>
+						<h4>FALSE {{title}}</h4>
 					{{/if}}											
 						<p class="text-muted">{{{description}}} <a href="{{pathFor route = 'newsAndEventsPage'}}" class="textlink">read more </a></p>
 					</div>
