--- a/client/templates/account-templates/at_pwd_form_btn_mod.html
+++ b/client/templates/account-templates/at_pwd_form_btn_mod.html
@@ -1,5 +1,5 @@
 <template name="atPwdFormBtnMod">
-  <div class="col-sm-6 text-left">
+  <div class="col-sm-6 text-left input-spacing">
       <p>*Fields are mandatory.</p>
   </div>
 	<div class="col-sm-6">
