--- a/client/templates/account-templates/uploadInput.html
+++ b/client/templates/account-templates/uploadInput.html
@@ -5,7 +5,7 @@
     </label>
 
     <!-- adding specific cols and form group -->
-    <div class="col-sm-6">
+    <div class="col-sm-6 input-spacing">
         <div class="form-group">
           <div class="form-group fileUpload btn btn-default btn-block btn-icon btn-file-upload">
               <span class="glyphicon glyphicon-upload"></span> Upload a profile photo
