--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -1203,6 +1203,10 @@ ul.list-inline.social-buttons {
 		border-color: @gray-light;
 }
 
+.input-spacing {
+		margin: 0 0 20px 0;
+}
+
 /*.input {
 		font-weight: 300;
 		font-size: 14px;
@@ -1541,4 +1545,14 @@ section.layer-login {
 
 .list-group {
     margin-bottom: -1px;
+}
+
+.at-pwd-form {
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+}
+
+.at-form {
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
 }
