--- a/client/templates/account-templates/at_pwd_form_mod.html
+++ b/client/templates/account-templates/at_pwd_form_mod.html
@@ -1,6 +1,6 @@
 <template name="atPwdFormMod">
   <div class="at-pwd-form">
-    <form role="form" id="at-pwd-form" novalidate action="#" method="POST" class="extra-spacing-bottom extra-spacing-top">
+    <form role="form" id="at-pwd-form" novalidate action="#" method="POST">
       <div class="row">
           <div class="col-lg-12 text-center">
               <h3>REGISTER by creating a new account:</h3>
@@ -26,7 +26,7 @@
               <hr class="light-blue-form">
           </div>
       </div>
-      
+
     </form>
   </div>
 </template>
