--- a/client/templates/account-templates/at_social_mod.html
+++ b/client/templates/account-templates/at_social_mod.html
@@ -2,9 +2,9 @@
   <!-- <button class="btn at-social-btn {{disabled}}" id="at-{{name}}" name="{{name}}">
     <i class="{{iconClass}}"></i> {{buttonText}}
   </button> -->
-  <div class="col-sm-3 col-xs-6">
+  <div class="col-sm-3 col-xs-6 input-spacing">
       <button class="btn btn-primary btn-block btn-social {{disabled}}" id="at-{{name}}" name="{{name}}">
-          <span class="{{iconClass}}"></span> 
+          <span class="{{iconClass}}"></span>
           {{buttonText}}
       </button>
   </div>
