--- a/client/templates/account-templates/interests.html
+++ b/client/templates/account-templates/interests.html
@@ -8,7 +8,7 @@
     <div class="col-sm-12">
         <div class="form-group">
 
-          <input type="{{type}}" class="form-control" id="at-field-{{_id}}" name="at-field-{{_id}}" placeholder="{{placeholder}}" autocapitalize="none" autocorrect="off">
+          <input type="{{type}}" class="form-control input-spacing" id="at-field-{{_id}}" name="at-field-{{_id}}" placeholder="{{placeholder}}" autocapitalize="none" autocorrect="off">
           {{#if hasIcon}}
             <span class="{{iconClass}} form-control-feedback"></span>
           {{/if}}
