Polish form-control-feedback in joinus

--- a/client/templates/account-templates/at_pwd_form_btn_mod.html
+++ b/client/templates/account-templates/at_pwd_form_btn_mod.html
@@ -3,6 +3,6 @@
       <p>*Fields are mandatory.</p>
   </div>
 	<div class="col-sm-6">
-	  <button type="submit" class="extra-spacing-bottom btn btn-block btn-primary pull-right">{{buttonText}}</button>
+	  <button type="submit" class="extra-spacing-bottom extra-spacing-top btn btn-block btn-primary pull-right">{{buttonText}}</button>
 	</div>
 </template>
