--- a/client/templates/account-templates/at_social_mod.html
+++ b/client/templates/account-templates/at_social_mod.html
@@ -2,7 +2,7 @@
   <!-- <button class="btn at-social-btn {{disabled}}" id="at-{{name}}" name="{{name}}">
     <i class="{{iconClass}}"></i> {{buttonText}}
   </button> -->
-  <div class="col-sm-3 col-xs-6 input-spacing">
+  <div class="col-sm-3 col-xs-6 input-spacing-bottom">
       <button class="btn btn-primary btn-block btn-social {{disabled}}" id="at-{{name}}" name="{{name}}">
           <span class="{{iconClass}}"></span>
           {{buttonText}}
