--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -1204,7 +1204,11 @@ ul.list-inline.social-buttons {
 }
 
 .input-spacing {
-		margin: 0 0 20px 0;
+		margin: 20px 0 0 0;
+}
+
+.input-spacing-bottom {
+        margin: 0 0 20px 0;
 }
 
 /*.input {
@@ -1555,4 +1559,20 @@ section.layer-login {
 .at-form {
     margin: 0 0 0 0;
     padding: 0 0 0 0;
+}
+
+.help-block {
+    margin-bottom: 0;
+}
+
+.form-control-feedback {
+    top: 20px;
+    right: 15px;
+}
+
+@media (max-width: 767px) {
+    .form-control-feedback {
+        top: 0;
+        right: 15px;
+    }
 }
