--- a/client/templates/admin/admin-publications.html
+++ b/client/templates/admin/admin-publications.html
@@ -115,7 +115,7 @@
 		        <div class="col-sm-10">
 		            <input type="text" class="form-control" name="editors" id="firstEditor"  placeholder="Enter Book Editor(s)">
 		            <span class="input-group-btn">
-                	<button class="btn btn-default" id="js-addEditors" type="button">ADD EDITORS</button>
+                	<button class="btn btn-primary extra-spacing-bottom" id="js-addEditors" type="button">ADD EDITORS</button>
               	</span>
 		        </div>
 			    </div>
