--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -203,7 +203,7 @@ h1 {
 		text-align: center;
 		margin-bottom: 0px;
 		padding-top: 20px;
-        text-shadow: 0 0 2px #000;
+        // text-shadow: 0 0 2px #000;
 }
 
 h2{
@@ -214,7 +214,7 @@ h2{
 		text-align: center;
 		margin-bottom: 25px;
 		margin-top: 0px;
-        text-shadow: 0 0 2px #000;
+        // text-shadow: 0 0 2px #000;
 }
 
 h3 {
