--- a/client/templates/guests/contact.html
+++ b/client/templates/guests/contact.html
@@ -10,7 +10,15 @@
 					<div class="header-content-inner">
 							<h1>Contact</h1>
 							<hr>
-							<h2>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</h2>
+							<h2>Open Strategy Network is designed to be dynamic and collaborative, growing with the community to
+
+include new knowledge and resources. To that end, OSN warmly welcomes any contributions. In
+
+order to contribute, please send an email to XXX
+
+We greatly appreciate your support and would like to express our gratitude for your contributions
+
+allowing us to keep our website up-to-date.</h2>
 							<button href="#joinus" class="btn btn-primary btn-xl page-scroll">JOIN US</button>
 					</div>
 			</div>
