--- a/client/templates/guests/membersGuests.html
+++ b/client/templates/guests/membersGuests.html
@@ -10,7 +10,7 @@
           <div class="header-content-inner">
               <h1>Members</h1>
               <hr>
-              <h2>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</h2>
+              <h2>Anybody interested in Open Strategy can join the OSN. Registration is free.</h2>
           </div>
       </div>
   </header> <!-- ./Stage -->
@@ -29,7 +29,7 @@
                       <h3>ONLY VISIBLE TO MEMBERS</h3>
                       <hr>
                       <p class="text-muted form">If you want to join the community please register here:</p>
-                      <button type="Join us" class="btn btn-primary btn-block">JOIN US</button>           
+                      <button type="Join us" class="btn btn-primary btn-block">JOIN US</button>
                   </div>
 
                   <hr class="layer-light">
@@ -97,7 +97,7 @@
                           </div>
                       </div>
                   </div>
-              </div> 
+              </div>
           </section><!-- ./Search -->
 
 
@@ -188,7 +188,7 @@
                           </div>
                       </div>
                   </div>
-                  
+
                   <hr class="light">
 
                   <div class="row">
