--- a/client/templates/members/membersMembers.html
+++ b/client/templates/members/membersMembers.html
@@ -10,7 +10,7 @@
 					<div class="header-content-inner">
 							<h1>Members</h1>
 							<hr>
-							<h2>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</h2>
+							<h2>Anybody interested in Open Strategy can join the OSN. Registration is free.</h2>
 					</div>
 			</div>
 	</header> <!-- ./Stage -->
@@ -33,7 +33,7 @@
 										</div>
 								</div>
 						</div>
-				</div> 
+				</div>
 		</section><!-- ./Search -->
 
 
