--- a/client/templates/header_footer/_header.html
+++ b/client/templates/header_footer/_header.html
@@ -11,24 +11,24 @@
 										<span class="icon-bar"></span>
 										<span class="icon-bar"></span>
 								</button>
-								<a class="navbar-brand page-scroll" href="{{pathFor route = 'home'}}"><img src="img/osn_logo.png" class="img-responsive" alt="Open Strategy Network"></a>
+								<a class="navbar-brand" href="{{pathFor route = 'home'}}"><img src="img/osn_logo.svg" class="img-responsive" alt="Open Strategy Network"></a>
 						</div>
 
-						<!-- navbar-collapse for toggling -->
-						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <!-- Collect the nav links, forms, and other content for toggling -->
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 								<ul class="nav navbar-nav navbar-right">
 										<li class="{{isActiveRoute name='allNewsEvents'}}">
-											<a class="page-scroll" href="{{pathFor route = 'allNewsEvents'}}">News &amp; Events</a>
+											<a href="{{pathFor route = 'allNewsEvents'}}">News &amp; Events</a>
 										</li>
 										<li class="{{isActiveRoute name='bibliography'}}">
-											<a class="page-scroll" href="{{pathFor route = 'bibliography'}}">Bibliography</a>
+											<a href="{{pathFor route = 'bibliography'}}">Bibliography</a>
 										</li >
 										<li class="{{isActiveRoute name='members'}}">
-											<a class="page-scroll" href="{{pathFor route = 'members'}}">Members</a>
+											<a href="{{pathFor route = 'members'}}">Members</a>
 										</li>
                     {{#unless currentUser}}
 										<li class="{{isActiveRoute name='joinUs'}}">
-											<a class="page-scroll" href="{{pathFor route = 'joinUs'}}">Join us</a>
+											<a href="{{pathFor route = 'joinUs'}}">Join us</a>
 										</li>
                     {{/unless}}
 										<li class="{{isActiveRoute name='contact'}}">
@@ -40,45 +40,58 @@
 												<button type="button" class="btn btn-primary btn-login">LOG IN</button>
 										</form>
                     {{else}}
-                    <li class="dropdown">
-                      <button type="button" href="#" class="dropdown-toggle btn-profile" data-toggle="dropdown">
-                          <span class="glyphicon glyphicon-user"></span>PROFILE <span class="caret"></span>
-                      </button>
-                      <ul class="dropdown-menu" role="menu">
-                          <li>
-                              <p class="profile-username">Hello {{currentUser.profile.firstName}}</p>
-                          </li>
-                          <li >
-                              <a class="profile-links" href="{{pathFor route = 'profileSettings'}}"><i class="fa fa-cog"></i>&nbsp; Settings</a>
-                          </li>
-                          
-                          <li>
-                              <a class="profile-links" href="{{pathFor route = 'adminNewsEventsList'}}"><i class="fa fa-lock"></i>&nbsp; News &amp; Events</a>
-                          </li>
-                          <li>
-                              <a class="profile-links" href="{{pathFor route = 'adminPublicationsList'}}"><i class="fa fa-lock"></i>&nbsp; Publications</a>
-                          </li>
+                                        <li class="dropdown">
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PROFILE <span class="caret"></span></a>
+                                            <ul class="dropdown-menu">
+                                                <li><p class="profile-username">Hello {{currentUser.profile.firstName}}</p></li>
+                                                <li role="separator" class="divider"></li>
+                                                <li><a class="profile-links" href="{{pathFor route = 'profileSettings'}}"><i class="fa fa-cog"></i>&nbsp; Settings</a></li>
+                                                <li><a href="#">Something else here</a></li>
+                                                <li><a href="#">Separated link</a></li>
+                                                <li><a href="#">One more separated link</a></li>
+                                             </ul>
+                                        </li>
 
-                           <li>
-                              <a class="profile-links" href="{{pathFor route = 'adminMembers'}}"><i class="fa fa-lock"></i>&nbsp; Members</a>
-                          </li>
 
-                          {{#if isInRole 'admin'}}                         
-                          <!-- <li>
-                              <a class="profile-links" href="{{pathFor route = 'adminNewsEventsList'}}"><i class="fa fa-lock"></i>&nbsp; News &amp; Events</a>
-                          </li>
-                          <li>
-                              <a class="profile-links" href="{{pathFor route = 'adminPublicationsList'}}"><i class="fa fa-lock"></i>&nbsp; Publications</a>
-                          </li> 
-                           <li>
-                              <a class="profile-links" href="{{pathFor route = 'adminMembers'}}"><i class="fa fa-lock"></i>&nbsp; Members</a>
-                          </li>-->
-                          {{/if}}
-                          <li>
-                              <a class="profile-links js-logOut" data-action="logout"><i class="fa fa-sign-out"></i>&nbsp; Log out</a>
-                          </li>
-                      </ul>
-                    </li>
+                                        <li class="dropdown">
+                                          <button type="button" href="#" class="dropdown-toggle btn-profile" data-toggle="dropdown">
+                                              <span class="glyphicon glyphicon-user"></span>PROFILE <span class="caret"></span>
+                                          </button>
+                                          <ul class="dropdown-menu" role="menu">
+                                              <li>
+                                                  <p class="profile-username">Hello {{currentUser.profile.firstName}}</p>
+                                              </li>
+                                              <li >
+                                                  <a class="profile-links" href="{{pathFor route = 'profileSettings'}}"><i class="fa fa-cog"></i>&nbsp; Settings</a>
+                                              </li>
+
+                                              <li>
+                                                  <a class="profile-links" href="{{pathFor route = 'adminNewsEventsList'}}"><i class="fa fa-lock"></i>&nbsp; News &amp; Events</a>
+                                              </li>
+                                              <li>
+                                                  <a class="profile-links" href="{{pathFor route = 'adminPublicationsList'}}"><i class="fa fa-lock"></i>&nbsp; Publications</a>
+                                              </li>
+
+                                               <li>
+                                                  <a class="profile-links" href="{{pathFor route = 'adminMembers'}}"><i class="fa fa-lock"></i>&nbsp; Members</a>
+                                              </li>
+
+                                              {{#if isInRole 'admin'}}
+                                              <!-- <li>
+                                                  <a class="profile-links" href="{{pathFor route = 'adminNewsEventsList'}}"><i class="fa fa-lock"></i>&nbsp; News &amp; Events</a>
+                                              </li>
+                                              <li>
+                                                  <a class="profile-links" href="{{pathFor route = 'adminPublicationsList'}}"><i class="fa fa-lock"></i>&nbsp; Publications</a>
+                                              </li>
+                                               <li>
+                                                  <a class="profile-links" href="{{pathFor route = 'adminMembers'}}"><i class="fa fa-lock"></i>&nbsp; Members</a>
+                                              </li>-->
+                                              {{/if}}
+                                              <li>
+                                                  <a class="profile-links js-logOut" data-action="logout"><i class="fa fa-sign-out"></i>&nbsp; Log out</a>
+                                              </li>
+                                          </ul>
+                                        </li>
                     {{/unless}}
 								</ul>
 						</div> <!-- /.navbar-collapse -->
